// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should match the snapshot with an identity 1`] = `
<div>
  <div
    class="container"
  >
    <h1
      class="heading"
    >
      Add Identity
    </h1>
    <h3
      class="info"
    >
      You have 3 identities. Add another one.
    </h3>
    <p
      class="termsLine"
    >
      <label
        class="agreeLabel"
      >
        <input
          class="agree"
          type="checkbox"
        />
        <span />
         I have read and agree to the 
      </label>
      <a
        class="terms"
        href="https://www.sporran.org/terms"
        rel="noreferrer"
        target="_blank"
      >
        terms of use
      </a>
    </p>
    <a
      aria-disabled="true"
      class="create"
      href="/identity/create"
    >
      Create Identity
    </a>
    <a
      aria-disabled="true"
      class="import"
      href="/identity/import"
    >
      Import an identity from pre-existing phrase
    </a>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </div>
</div>
`;

exports[`Welcome should match the snapshot without identities 1`] = `
<div>
  <div
    class="container"
  >
    <h1
      class="heading"
    >
      Welcome to your Sporran
    </h1>
    <h3
      class="info"
    >
      You currently don’t have any identities.
Create your first identity to get started.
    </h3>
    <p
      class="termsLine"
    >
      <label
        class="agreeLabel"
      >
        <input
          class="agree"
          type="checkbox"
        />
        <span />
         I have read and agree to the 
      </label>
      <a
        class="terms"
        href="https://www.sporran.org/terms"
        rel="noreferrer"
        target="_blank"
      >
        terms of use
      </a>
    </p>
    <a
      aria-disabled="true"
      class="create"
      href="/identity/create"
    >
      Create Identity
    </a>
    <a
      aria-disabled="true"
      class="import"
      href="/identity/import"
    >
      Import an identity from pre-existing phrase
    </a>
  </div>
</div>
`;
